--- a/01-ExenseSplitter/index.html
+++ b/01-ExenseSplitter/index.html
@@ -7,9 +7,56 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="top">
         <h1>Expense Splitter</h1>
         <p>Split exenses and see who owes what!</p>
     </header>
+
+    <main class="card">
+        <form id="personForm" class="rowForm">
+            <input id="personInput" type="text" placeholder="Add person name" />
+            <button>Add Person</button>
+        </form>
+
+        <form id="expenseForm" class="rowForm">
+            <input id="descInput" type="text" placeholder="Expense Description" />
+            <input id="amountInput" type="number" placeholder="Amount" />
+            <select id="paidBySelect">
+                <option value="John"></option>
+                <option value="Carlos">Carlos</option>
+            </select>
+            <button>Add Expense</button>
+        </form>
+        <section>
+            <h3>People</h3>
+            <ul class="list">
+                <li>John</li>
+                <li>Carlos</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Expenses</h3>
+            <ul class="list">
+                <li>Sodas - $10 Paid by Carlos</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Total</h3>
+            <p>
+                Total Spent: <strong>$10.00</strong><br/>
+                Split Per Person: <strong>$5.00</strong>
+            </p>
+        </section>
+
+        <section class="summary">
+            <h3>Summary</h3>
+            <ul class="list">
+                <li>John owes $5.00</li>
+                <li>Carlos gets $5.00</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
