--- a/01-ExenseSplitter/index.html
+++ b/01-ExenseSplitter/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="top">
         <h1>Expense Splitter</h1>
-        <p>Split exenses and see who owes what!</p>
+        <p>Split expenses and see who owes what.</p>
     </header>
 
     <main class="card">
